# sample_no_workspace

./: Cargo.toml  Justfile
src/: lib.rs
