[package]
name = "donation-sample-single-package-no-workspace"
description = "Donation Contract Example for NEAR Protocol"
version = "0.7.7"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/dj8yfo/sample_no_workspace"

[lib]
crate-type = ["cdylib", "rlib"]
# add comment for test

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-env-flag-supported-dev"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:5f68214f8660e3e1e214d8cbe40d06c8c330cc9cb78f9a991d95dd97e6b7eda6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.2.1", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.2.1", features = ["legacy"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
